@@ -1,4 +1,4 @@
 @echo off
 cd /d "%~dp0"
-java -Dfile.encoding=UTF-8 --add-modules=jdk.attach -jar monitor-0.0.1-SNAPSHOT.jar
+java --add-modules jdk.attach --add-exports jdk.attach/sun.tools.attach=ALL-UNNAMED -jar monitor-0.0.1-SNAPSHOT.jar
 pause
